--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
+:root {
+	--main-color: #2596be;
+	--main-color-hover: #30b1e0;
+	--main-color-focus: #40A4C6;
+}
+
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
   margin: 0;
+	max-width: calc(100vw - 22px);
+	overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +22,38 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+/* ::-webkit-scrollbar {
+	-webkit-appearance: none;
+	width: 10px;
+	height: 10px;
+}
+
+
+::-webkit-scrollbar-thumb {
+	cursor: pointer;
+	border-radius: 5px;
+	background: rgba(0, 0, 0, .25);
+	-webkit-transition: color .2s ease;
+	transition: color .2s ease;
+}
+
+
+::-webkit-scrollbar-track {
+	background: rgba(240, 240, 240, .3);
+	border-radius: 0;
+} */
+
+
+::-webkit-scrollbar {
+	width: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+	height: 56px;
+	border-radius: 8px;
+	border: 4px solid transparent;
+	background-clip: content-box;
+	background-color: #bbb;
 }
