--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 body {
   margin: 0;
-	max-width: calc(100vw - 22px);
+	/* max-width: calc(100vw - 22px); */
 	overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -21,29 +21,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-
-
-/* ::-webkit-scrollbar {
-	-webkit-appearance: none;
-	width: 10px;
-	height: 10px;
-}
-
-
-::-webkit-scrollbar-thumb {
-	cursor: pointer;
-	border-radius: 5px;
-	background: rgba(0, 0, 0, .25);
-	-webkit-transition: color .2s ease;
-	transition: color .2s ease;
-}
-
-
-::-webkit-scrollbar-track {
-	background: rgba(240, 240, 240, .3);
-	border-radius: 0;
-} */
 
 
 ::-webkit-scrollbar {
