--- a/src/pages/read/index.module.css
+++ b/src/pages/read/index.module.css
@@ -94,7 +94,7 @@
 
 .chapters img {
 	display: block;
-	min-height: 400px;
+	/* min-height: 400px; */
 	max-width: 100%;
 	max-height: 140vh;
 	margin: 0 auto;
