--- a/src/pages/index/index.module.css
+++ b/src/pages/index/index.module.css
@@ -1,20 +1,19 @@
-
 body {
 	background: #121212;
 	width: 100vw;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .title {
-	color: rgba(255, 255, 255, .7);
+	color: rgba(255, 255, 255, 0.7);
 	padding-bottom: 10px;
 	font-weight: 100;
 	text-align: center;
 }
-
 
 .main {
 	margin: 10px 0;
@@ -23,10 +22,8 @@ body {
 
 .main > section {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
 }
-
-
 
 .newManga {
 	position: fixed;
@@ -41,17 +38,16 @@ body {
 	border: 0;
 	outline: none;
 	background: var(--main-color);
-	transition: background .3s;
+	transition: background 0.3s;
 	box-shadow: 0px 5px 8px 4px rgb(0 0 0 / 20%);
 
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	
+
 	cursor: pointer;
 	user-select: none;
 }
-
 
 .newManga:hover {
 	background: var(--main-color-hover);
@@ -61,20 +57,15 @@ body {
 	background: var(--main-color-focus);
 }
 
-
 .newManga img {
 	width: 45%;
 	height: 45%;
 }
 
-
-
-
-
 .item {
 	/* width: 159px; */
 	/* height: 209px; */
-	aspect-ratio: 1 / 1.3;
+	aspect-ratio: 1 / 1.45;
 	margin: 10px 5px;
 	color: #fff;
 	display: inline-flex;
@@ -102,22 +93,19 @@ body {
 	height: 30px;
 }
 
-
 .img {
-	/* width: 159px;
-	height: 209px; */
 	width: 100%;
 	height: 100%;
+	text-align: center;
+	overflow: hidden;
 }
 
 .img img {
-	width: 100%;
 	height: 100%;
 }
 
-
 .main .item footer {
-	background: rgba(0, 0, 0, .6);
+	background: rgba(0, 0, 0, 0.6);
 	padding: 3px 5px;
 	overflow: hidden;
 	position: absolute;
@@ -131,8 +119,6 @@ body {
 	font-size: 14px;
 	color: #b5b5b5;
 }
-
-
 
 .main .item > div > p {
 	margin: 0;
