--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 	--main-color: #2596be;
 	--main-color-hover: #30b1e0;
 	--main-color-focus: #40a4c6;
+
+	--background-layer-0: #121212;
+	--background-layer-1: #222;
+	--background-layer-2: #303030;
 }
 
 #root {
@@ -39,4 +43,40 @@ body {
 
 iframe {
 	display: none !important;
+}
+
+.button {
+	text-decoration: none;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+
+	border: 1px solid #222;
+	background: transparent;
+	border-radius: 4px;
+	font-family: inherit;
+	transition: box-shadow, background 0.2s;
+	user-select: none;
+}
+
+.button[disabled] {
+	opacity: 0.3;
+	user-select: none;
+	pointer-events: none;
+}
+
+.button:not([disabled]):hover {
+	box-shadow: 0 1px 3px rgb(0 0 0 / 50%);
+	background: #303030;
+	cursor: pointer;
+}
+
+.button img {
+	padding: 5px 8px;
+}
+
+.button span {
+	color: #eee;
+	padding: 5px;
+	width: 50px;
 }
