--- a/src/pages/index/index.module.css
+++ b/src/pages/index/index.module.css
@@ -1,6 +1,5 @@
 .title {
 	color: rgba(255, 255, 255, 0.7);
-	padding-bottom: 10px;
 	font-weight: 100;
 	text-align: center;
 }
@@ -10,11 +9,13 @@
 	padding: 15px 10px;
 }
 
-.main > header {
+.header {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
 	padding: 0 5px;
+	margin-bottom: 5px;
 }
 
 .profileDropdown {
@@ -137,55 +138,4 @@
 .newManga img {
 	width: 45%;
 	height: 45%;
-}
-
-.profilesMain {
-	height: 100vh;
-	width: 100vw;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-}
-
-.profilesMain .title {
-	margin-bottom: 30px;
-}
-
-.profiles {
-	display: flex;
-}
-
-.profile {
-	margin-right: 2vw;
-	text-align: center;
-	text-decoration: none;
-	cursor: pointer;
-}
-
-.profile img,
-.profile svg {
-	height: 10vw;
-	width: 10vw;
-	max-height: 200px;
-	max-width: 200px;
-	min-height: 84px;
-	min-width: 84px;
-	border-radius: 4px;
-	border: 0.15em solid transparent;
-	fill: grey;
-}
-
-.profile p {
-	font-size: 1.3vw;
-	color: grey;
-}
-
-.profile:hover img,
-.profile:hover svg {
-	border-color: #e5e5e5;
-}
-
-.profile:hover p {
-	color: #e5e5e5;
 }
