--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -24,7 +24,19 @@
 	font-size: 16px;
 }
 
-.item:hover {
+.item[disabled] {
+	cursor: not-allowed;
+}
+
+.item[disabled] * {
+	color: #777;
+}
+
+.item[disabled] svg {
+	fill: currentColor;
+}
+
+.item:not([disabled]):hover {
 	background: var(--bg-24dp);
 }
 
@@ -32,7 +44,7 @@
 	width: 100%;
 	height: 0.5px;
 	background: #333;
-	margin: 10px 0;
+	margin: 5px 0;
 }
 
 .icon {
