--- a/src/components/PopupOverlay/PopupOverlay.module.css
+++ b/src/components/PopupOverlay/PopupOverlay.module.css
@@ -63,12 +63,13 @@
 
 	max-width: calc(100vw - 2em);
 	max-height: calc(100vh - 2em);
-	border-radius: 2em;
+	border-radius: 1em;
 	overflow: hidden;
 }
 
 .blackContainer[data-show='true'] .container {
-	animation: contentIn 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
+	/* animation: contentIn 0.2s cubic-bezier(0.3, 0.88, 0.62, 1.11) forwards; */
+	animation: contentIn 0.2s ease-in-out forwards;
 }
 
 .blackContainer[data-show='false'] .container {
@@ -89,12 +90,14 @@
 	font-size: 1em;
 	color: #fff;
 	font-weight: 700;
+	user-select: none;
 }
 
 .closeBtn {
-	width: 2.2em;
-	height: 2.2em;
+	width: 2.7em;
+	height: 2.7em;
 	border-radius: 0.5em;
+	padding: 0.3em;
 	background-color: inherit;
 	border: 0;
 	outline: none;
@@ -109,8 +112,17 @@
 }
 
 .content {
-	min-height: calc(100% - 60px);
-	overflow: hidden auto;
 	width: 100%;
-	padding: 1em;
+	min-height: calc(100% - 60px);
+	max-height: calc(600px - 4em);
+}
+
+@media screen and (max-width: 450px) {
+	.container {
+		width: 100vw;
+		max-width: 100vw;
+		height: 100vh;
+		max-height: 100vh;
+		border-radius: 0;
+	}
 }
