--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,13 @@
 body {
 	/* max-width: calc(100vw - 22px); */
 	overflow-x: hidden;
+	line-height: 1.35;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
+	/* font-family: Noto Sans, Noto Sans HK, Noto Sans JP, Noto Sans KR, Noto Sans SC,
+		sans-serif; */
+	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background-color: var(--bg-00dp);
