--- a/src/components/MangaCard/MangaCard.module.css
+++ b/src/components/MangaCard/MangaCard.module.css
@@ -1,5 +1,5 @@
 .card {
-	width: calc(100% / 3);
+	width: 100%;
 	color: #fff;
 	display: inline-flex;
 	flex-direction: column;
@@ -123,6 +123,18 @@
 	top: -10px;
 	width: 30px;
 	height: 30px;
+}
+
+@media (min-width: 18em) {
+	.card {
+		width: calc(100% / 2);
+	}
+}
+
+@media (min-width: 31.25em) {
+	.card {
+		width: calc(100% / 3);
+	}
 }
 
 @media (min-width: 43.75em) {
