--- a/src/components/PopupCreator/PopupCreator.module.css
+++ b/src/components/PopupCreator/PopupCreator.module.css
@@ -40,8 +40,6 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 
-	width: 500px;
-	height: 600px;
 	background-color: var(--bg-00dp);
 
 	max-width: calc(100vw - 2em);
@@ -95,16 +93,19 @@
 
 .content {
 	width: 100%;
-	min-height: calc(100% - 60px);
-	max-height: calc(600px - 4em);
+	max-height: calc(100vh - 6em);
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 40em) {
 	.container {
 		width: 100vw;
 		max-width: 100vw;
 		height: 100vh;
 		max-height: 100vh;
 		border-radius: 0;
+	}
+
+	.content {
+		max-height: calc(100vh - 4em);
 	}
 }
