--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,22 @@
 body {
 	overflow-x: hidden;
 	line-height: 1.35;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+	/* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
+		sans-serif; */
 	/* font-family: Noto Sans, Noto Sans HK, Noto Sans JP, Noto Sans KR, Noto Sans SC,
 		sans-serif; */
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background-color: var(--bg-00dp);
+}
+
+body,
+button {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -140,7 +147,7 @@ svg {
 	border-radius: 50%;
 	position: absolute;
 	left: 0;
-	top: -0.2em;
+	top: -0.15em;
 	transition: left 0.1s ease-in-out;
 }
 
