--- a/src/pages/index/index.module.css
+++ b/src/pages/index/index.module.css
@@ -127,7 +127,7 @@
 	border: 0;
 	outline: none;
 	background: var(--main-color);
-	transition: background 0.3s;
+	transition: background 0.2s;
 	box-shadow: 0px 5px 8px 4px rgb(0 0 0 / 20%);
 
 	display: flex;
@@ -146,7 +146,7 @@
 	background: var(--main-color-focus);
 }
 
-.newManga img {
-	width: 45%;
-	height: 45%;
+.newManga svg {
+	width: 50%;
+	height: 50%;
 }
